--- a/ECommerce.csproj
+++ b/ECommerce.csproj
@@ -187,6 +187,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104180414454_InitialCreate.cs" />
+    <Compile Include="Migrations\202104180414454_InitialCreate.Designer.cs">
+      <DependentUpon>202104180414454_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104180426145_AlteraAnotationsTabDepartaments.cs" />
+    <Compile Include="Migrations\202104180426145_AlteraAnotationsTabDepartaments.Designer.cs">
+      <DependentUpon>202104180426145_AlteraAnotationsTabDepartaments.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Departaments.cs" />
     <Compile Include="Models\ECommerceContext.cs" />
@@ -272,6 +281,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202104180414454_InitialCreate.resx">
+      <DependentUpon>202104180414454_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104180426145_AlteraAnotationsTabDepartaments.resx">
+      <DependentUpon>202104180426145_AlteraAnotationsTabDepartaments.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
