Criando relacionamentos no banco

--- a/ECommerce.csproj
+++ b/ECommerce.csproj
@@ -197,6 +197,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CitiesController.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\Departaments.cs" />
     <Compile Include="Models\ECommerceContext.cs" />
@@ -266,6 +267,11 @@
     <Content Include="Views\Departaments\Details.cshtml" />
     <Content Include="Views\Departaments\Edit.cshtml" />
     <Content Include="Views\Departaments\Index.cshtml" />
+    <Content Include="Views\Cities\Create.cshtml" />
+    <Content Include="Views\Cities\Delete.cshtml" />
+    <Content Include="Views\Cities\Details.cshtml" />
+    <Content Include="Views\Cities\Edit.cshtml" />
+    <Content Include="Views\Cities\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
